feat: Spring Boot Actuator 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,13 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+  management:
+    endpoints:
+      web:
+        exposure:
+          include: health, info
+
+    endpoint:
+      health:
+        show-details: always
