feat: 네이버 사용자 정보에 이름 대신 닉네임 저장

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
             redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
             authorization-grant-type: authorization_code
             scope:
-              - name
+              - nickname
               - email
             client-name: Naver
         provider:
