fix: 워크플로우 파일에 naver 환경변수 추가

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,6 +31,9 @@ jobs:
 
       - name: Build and Test
         run: ./gradlew build
+        env:
+          NAVER_CLIENT_ID: ${{ secrets.NAVER_CLIENT_ID }}
+          NAVER_CLIENT_SECRET: ${{ secrets.NAVER_CLIENT_SECRET }}
 
   deploy:
     needs: build-and-test
