fix: 다운로드 경로 수정

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -58,7 +58,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: app-jar
-          path: build/libs
+          path: .
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
