--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -11,7 +11,15 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
-    show-sql: true
+        format_sql: false
+    show-sql: false
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      ssl:
+        enabled: false
 
   h2:
     console:
