chore: 개발 환경에서 프로젝트 로그 레벨 DEBUG로 설정

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -22,5 +22,5 @@ spring:
 
 logging:
   level:
-    com.yourcompany.myproject: DEBUG
+    io.reading_tracker: DEBUG
     org.springframework.data.redis: DEBUG
