chore: 워크플로우에 AES_SECRET_KEY 추가

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -51,6 +51,7 @@ jobs:
           NAVER_CLIENT_ID: ${{ secrets.NAVER_CLIENT_ID }}
           NAVER_CLIENT_SECRET: ${{ secrets.NAVER_CLIENT_SECRET }}
           JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
+          AES_SECRET_KEY: ${{ secrets.AES_SECRET_KEY }}
 
       - name: Upload JAR artifact
         uses: actions/upload-artifact@v4
